caddy-ingressclass.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: caddy
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  controller: caddy.kube-system
