cert-manager.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cert-manager
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cert-manager
  namespace: cert-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cert-manager
  template:
    metadata:
      labels:
        app: cert-manager
    spec:
      serviceAccountName: cert-manager
      containers:
      - name: cert-manager
        image: quay.io/jetstack/cert-manager-controller:v1.14.4
        args:
        - --v=2
        - --enable-cert-owner-ref=true
        - --leader-elect=false
        ports:
        - name: http
          containerPort: 9402
          protocol: TCP
        - name: tcp
          containerPort: 9403
          protocol: TCP
        resources:
          requests:
            cpu: "10m"
            memory: "64Mi"
          limits:
            cpu: "100m"
            memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: cert-manager
  namespace: cert-manager
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 9402
    targetPort: 9402
    protocol: TCP
  selector:
    app: cert-manager
